@@ -8,9 +8,8 @@
 
 {% block brick_header_title %}
   {% if ctype %}
-    {% ctype_counted_instances_label ctype page.paginator.count as title %}
     {% widget_icon ctype=ctype size='brick-table' as ct_icon %}
-    {% brick_header_title title=title icon=ct_icon %}
+    {% brick_header_title title=ctype|ctype_counted_label:page.paginator.count icon=ct_icon %}
   {% else %}
     {% brick_header_title title=_('{count} Other entity') plural=_('{count} Other entities') %}
   {% endif %}
